<resources>
    <string name="app_name">Foodure</string>
    <string name="mobile_number">Mobile Number(10 Digits)</string>
    <string name="password">Password(Min. 4 characters)</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="register_yourself"><u>Don\'t have an account? Sign Up now.</u></string>
    <string name="preference_file_name">My Preferences</string>
    <string name="log_out">LOG OUT</string>
    <string name="enter_your_name">Name(Min. 3 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="go_to_log_in_page">Go To Log In Page</string>
    <string name="next">Next</string>
    <string name="email_address">Email Address</string>
    <string name="register">Register</string>
    <string name="rs_300_person">Rs.300/person</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="rs_cost_person">Rs.cost/person</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="rating">rating</string>
    <string name="question_answer">Question-Answer</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="home">Home</string>
    <string name="my_profile">MyProfile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Log Out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="cost_low_to_high">Cost(<b>Low to High</b>)</string>
    <string name="cost_high_to_low">Cost(<b>High to Low</b>)</string>
    <string name="cost_rating"><b>Rating</b></string>
    <string name="cost_name"><b>Name</b></string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="you_haven_t_place_any_orders_yet">You have not placed any orders yet!</string>
    <string name="you_have_not_added_any_restaurants_to_favourites">You have not added any restaurant to favourites yet!</string>
</resources>
