<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WelcomeActivity"
    android:id="@+id/drawerLayout">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinatorLayout">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar"
                android:background="@color/colorToolbar"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_scrollFlags="scroll|enterAlways"/>

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorPrimary"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etName"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_action_person_icon"
        android:padding="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:textColor="@color/colorBlack"
        android:maxLines="1"
        android:background="@color/colorWhite"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_below="@id/etName"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:background="@color/colorWhite"
        android:drawableStart="@drawable/ic_action_email_icon"
        android:textColor="@color/colorBlack"
        android:padding="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_below="@id/etEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number_10_digits"
        android:drawableStart="@drawable/ic_action_mobile_icon"
        android:textColor="@color/colorBlack"
        android:background="@color/colorWhite"
        android:inputType="phone"
        android:padding="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:maxLines="1"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/etDeliveryAddress"
        android:layout_below="@id/etMobileNumber"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/delivery_address"
        android:inputType="textPostalAddress"
        android:textColor="@color/colorBlack"
        android:drawableStart="@drawable/ic_action_delivery_icon"
        android:background="@color/colorWhite"
        android:padding="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_below="@id/etDeliveryAddress"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_action_password_icon"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/colorBlack"
        android:background="@color/colorWhite"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_action_password_icon"
        android:padding="8dp"
        android:textColor="@color/colorBlack"
        android:background="@color/colorWhite"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etConfirmPassword"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:elevation="5dp"
        android:padding="8dp"
        android:background="@color/colorToolbar"
        android:text="@string/register"
        android:textColor="@color/colorWhite"/>

</RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.drawerlayout.widget.DrawerLayout>