<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragment.ProfileFragment">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgProfileImage"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="62dp"
        android:src="@drawable/ic_action_profile"/>

    <TextView
        android:id="@+id/txtName"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgProfileImage"
        android:padding="8dp"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:hint="@string/enter_your_name"/>

    <TextView
        android:id="@+id/txtEmailAddress"
        android:layout_below="@id/txtName"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:textSize="17sp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:padding="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/txtMobileNumber"
        android:layout_below="@id/txtEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/mobile_number_10_digits"
        android:textColor="@color/colorBlack"
        android:background="@color/colorWhite"
        android:textSize="17sp"
        android:padding="8dp"
        android:maxLines="1"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:maxLength="14"/>

    <TextView
        android:id="@+id/txtDeliveryAddress"
        android:layout_below="@id/txtMobileNumber"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/delivery_address"
        android:textColor="@color/colorBlack"
        android:background="@color/colorWhite"
        android:padding="8dp"
        android:textSize="17sp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

</RelativeLayout>

</FrameLayout>