<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:layout_margin="6dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="#ffffff"
        android:weightSum="10"
        android:id="@+id/llContent">

        <ImageView
            android:layout_weight="3"
            android:id="@+id/imgFoodImage"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:src="@drawable/default_book_cover"
            android:layout_marginStart="4dp"
            android:padding="5dp"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp">

            <TextView
                android:id="@+id/txtRestaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtFoodPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/rs_cost_person"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/txtRestaurantName"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#D3D3D3"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp">

            <TextView
                android:id="@+id/txtRestaurantFavouriteLogo"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="3dp"
                android:layout_width="38dp"
                android:padding="8dp"
                android:layout_marginEnd="4dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_action_favourite"/>

            <TextView
                android:id="@+id/txtFoodRating"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtRestaurantFavouriteLogo"
                android:layout_alignParentEnd="true"
                android:text="@string/rating"
                android:textColor="#ffca28"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>